--- a/Source/EbookShop.Web/ClientApp/src/app/display-ebook/display-ebook.component.css
+++ b/Source/EbookShop.Web/ClientApp/src/app/display-ebook/display-ebook.component.css
@@ -4,3 +4,11 @@
   margin-left: auto;
   margin-right: auto;
 }
+#element {
+  width: 190px;
+  height: 450px;
+}
+.my-pagination /deep/ .ngx-pagination .current {
+  background-color: #bfc929;
+  font-size: larger;
+}
