--- a/Source/EbookShop.Web/ClientApp/src/app/ebook-tile/ebook-tile.component.css
+++ b/Source/EbookShop.Web/ClientApp/src/app/ebook-tile/ebook-tile.component.css
@@ -1,12 +1,23 @@
 #title {
   height: 35px;
 }
-#element {
-  width: 190px;
-  height: 450px
+#toolpit {
+  
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+}
+#too_button {
+  font-size: medium;
+  color:black;
+  
 }
 
 .full-img {
+  width: 180px;
+  height: 260px;
+}
+# {
   width: 180px;
   height: 260px;
 }
